# arctk-cpp

./: .build  .clang-format  .clang-tidy  .coveralls.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  Untitled-5.yml  cbcopy  coverage.info  default.profraw  gtest.cmake  index.html  iwyu.imp  output.ppm
benchmark/lin/: vec.cpp
benchmark/math/: prime.cpp  properties.cpp
config/doc/: Doxyfile.in
config/docs/: Doxyfile.in
config/include/: build.hpp.in  build.inl.in  config.hpp.in  version.hpp.in  version.inl.in
docs/: Doxyfile  _2fixed_8hpp.html  _2fixed_8hpp__dep__incl.map  _2fixed_8hpp__dep__incl.md5  _2fixed_8hpp__incl.map  _2fixed_8hpp__incl.md5  _2fixed_8hpp_source.html  aabb_8hpp.html  aabb_8hpp__dep__incl.map  aabb_8hpp__dep__incl.md5  aabb_8hpp__incl.map  aabb_8hpp__incl.md5  aabb_8hpp_source.html  actor_8hpp.html  actor_8hpp__dep__incl.map  actor_8hpp__dep__incl.md5  actor_8hpp__incl.map  actor_8hpp__incl.md5  actor_8hpp_source.html  actor_8inl.html  actor_8inl__dep__incl.map  actor_8inl__dep__incl.md5  actor_8inl__incl.map  actor_8inl__incl.md5  adaptive_8hpp.html  adaptive_8hpp__dep__incl.map  adaptive_8hpp__dep__incl.md5  adaptive_8hpp__incl.map  adaptive_8hpp__incl.md5  adaptive_8hpp_source.html  ambient_2frag_8hpp.html  ambient_2frag_8hpp__dep__incl.map  ambient_2frag_8hpp__dep__incl.md5  ambient_2frag_8hpp_source.html  ambient_2vert_8hpp.html  ambient_2vert_8hpp__dep__incl.map  ambient_2vert_8hpp__dep__incl.md5  ambient_2vert_8hpp_source.html  ambient_8hpp.html  ambient_8hpp__dep__incl.map  (+5451 more)
docs/html/: annotated.html  build_8hpp.html  build_8hpp.js  build_8hpp__dep__incl.map  build_8hpp__dep__incl.md5  build_8hpp_source.html  build_8inl.html  build_8inl__incl.map  build_8inl__incl.md5  build_8inl_source.html  classes.html  config_8hpp.html  config_8hpp__incl.map  config_8hpp__incl.md5  config_8hpp_source.html  constant_8hpp.html  constant_8hpp__dep__incl.md5  constant_8hpp__incl.md5  constant_8hpp_source.html  convert_8hpp.html  convert_8hpp__dep__incl.md5  convert_8hpp__incl.md5  convert_8hpp_source.html  dir_000001_000002.html  dir_000001_000003.html  dir_000001_000004.html  dir_000001_000005.html  dir_000001_000006.html  dir_000001_000007.html  dir_000004_000000.html  dir_000005_000000.html  dir_000008_000000.html  dir_0c4065b1b1e24ef69fc742f54a3eb22b.html  dir_13284c3b0c529a8f05fa9e5557d23cb7.html  dir_246d7703b1917d529f7795c1438d7849.html  dir_4d27d986fa8d8dbe95229db069b2eeda.html  dir_4d27d986fa8d8dbe95229db069b2eeda_dep.map  dir_5f0f7b4e47c97e9aa7a2d746f4761243.html  dir_64c0dfcced1b56082fc732e847e745a9.html  dir_64f94c193e4d03baf6e89b1053934749.html  (+122 more)
docs/latex/: annotated.tex  build_8hpp.tex  build_8hpp__dep__incl.md5  build_8inl.tex  build_8inl__incl.md5  config_8hpp.tex  config_8hpp__dep__incl.md5  config_8hpp__incl.md5  constant_8hpp.tex  constant_8hpp__dep__incl.md5  constant_8hpp__incl.md5  convert_8hpp.tex  convert_8hpp__dep__incl.md5  convert_8hpp__incl.md5  dir_0c4065b1b1e24ef69fc742f54a3eb22b.tex  dir_246d7703b1917d529f7795c1438d7849.tex  dir_64f94c193e4d03baf6e89b1053934749.tex  dir_70d12d211859e32f09c446be8c96f176.tex  dir_70d12d211859e32f09c446be8c96f176_dep.md5  dir_a4166f92c8d9fa46674f5fc3ba769c03.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_e417af09bd1e23beff1d9442b77e52f4.tex  files.tex  format_8hpp.tex  format_8hpp__dep__incl.md5  format_8hpp__incl.md5  main_8cpp.tex  main_8cpp__incl.md5  math_8hpp.tex  math_8hpp__dep__incl.md5  namespacearc.tex  namespacearc_1_1config.tex  namespacearc_1_1constant.tex  namespacearc_1_1format.tex  namespacearc_1_1format_a0c2871882ac6679e40c71a2176ddd529_cgraph.md5  namespacearc_1_1math.tex  namespacearc_1_1math_a7ff4593bf0cd78256420945b27713bcc_icgraph.md5  namespacearc_1_1prop.tex  namespacearc_1_1prop_a026d439c76bdafd78b68875044d7b087_icgraph.md5  namespacearc_1_1prop_a0b6cfeae4fa16eddbb6b7f1e9c355258_cgraph.md5  (+76 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+104 more)
guidelines/: encapsulation.txt
include/: config.hpp
include/arctk/: ansi.hpp  col.hpp  config.cpp  constant.hpp  constants.cpp  constants.hpp  consts.hpp  container.hpp  contracts.hpp  data.hpp  debug.hpp  dom.hpp  enum.hpp  equip.hpp  errno.hpp  exit.hpp  exitcode.hpp  format.hpp  formula.hpp  func.hpp  geom.hpp  grid.hpp  gui.hpp  index.hpp  io.hpp  log.hpp  macro.hpp  main.cpp  math.cpp  math.hpp  mesh.hpp  parse.hpp  phys.hpp  print.hpp  prop.hpp  properties.hpp  random.hpp  read.hpp  rng.hpp  scene.hpp  (+14 more)
legacy/: actor.hpp  bucket.hpp  cube3.hpp  dimension.hpp  dimension.inl  distribution.hpp  dynamic.hpp  geom.hpp  image.hpp  mat2.hpp  mat3.hpp  mat4.hpp  multivec.hpp  optical.hpp  postcondition.hpp  vec2.hpp  vec3.hpp  vec4.hpp
legacy/alg/: mat.hpp  vec.hpp
legacy/bucket/: fixed.hpp
legacy/data/: cube2.hpp  histogram1.hpp  image.hpp
legacy/debug/: contract.hpp
legacy/distribution/: discrete.hpp  floating.hpp  integer.hpp  univec3.hpp  vec.hpp
legacy/dom/: grid.hpp
legacy/equip/: detector.hpp
legacy/fmt/: progress.hpp  progress.inl
legacy/geom/: aabb.hpp  shape.hpp
legacy/gui/: actor.hpp  camera.hpp  keybind.hpp  keymap.hpp  uniform.hpp  window.hpp
legacy/iterator/: backward.hpp  backward.inl  forward.inl
legacy/mesh/: node.hpp
legacy/opt/: func.hpp  func.inl  mat.inl  sop.hpp
legacy/phys/: properties.hpp
legacy/shape/: aabb.hpp
rework/: bin.hpp  table.hpp
src/: main.cpp
test/: all.cpp  col.cpp  config.cpp  consts.cpp  data.cpp  disc.cpp  dom.cpp  equip.cpp  exit.cpp  geom.cpp  gui.cpp  img.cpp  index.cpp  mat.cpp  math.cpp  multi.cpp  opt.cpp  parse.cpp  phys.cpp  prop.cpp  random.cpp  search.cpp  sys.cpp  torus.cpp  tree.cpp  type.cpp
(+972 files in other folders)
